# PhoPyQtTimelinePlotter

./: .gitignore  PhoPyQtTimelinePlotter.code-workspace  README.md  pyproject.toml
docs/: DOCUMENTATION_GUIDE.md  conf.py  generate_docs.py
scripts/: download_vlc.py
src/phopyqttimelineplotter/: main.py
src/phopyqttimelineplotter/GUI/MainObjectListsWindow/: MainObjectListsWindow.py
src/phopyqttimelineplotter/GUI/MainWindow/: TimelineDrawingWindow.py
src/phopyqttimelineplotter/GUI/UI/TimelineFloatingHeaderWidget/: TimelineFloatingHeaderWidget.py
src/phopyqttimelineplotter/GUI/UI/TimelineHeaderWidget/: TimelineHeaderWidget.py
src/phopyqttimelineplotter/GUI/Windows/VideoPlayer/: MainVideoPlayerWindow.py  __init__.py
src/phopyqttimelineplotter/app/database/: DatabaseConnectionRef.py
src/phopyqttimelineplotter/lib/: vlc.py  vlc_setup.py
