[project]
name = "phopyqttimelineplotter"
version = "0.1.0"
requires-python = ">=3.9.13"
dependencies = [
    "av>=15.1.0",
    "click>=8.1.8",
    "cython>=3.1.3",
    "ffmpeg>=1.4",
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "orange-canvas-core>=0.2.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.13.7",
    "qtawesome>=1.4.0",
    "qtmodern>=0.2.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
